--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
         "armv7",
         "aarch64",
         "amd64",
+        "arm64" ,
         "i386"
     ],
     "url": "https://github.com/Alexxx113/alarmserver",
