--- a/hassio-alarmserver/config.json
+++ b/hassio-alarmserver/config.json
@@ -10,8 +10,8 @@
         "amd64",
         "i386"
     ],
-    "url": "https://github.com/alexxx113/alarmserver",
-    "image": "alexxx113/alarmserver",
+    "url": "https://github.com/alexxx113/hassio-alarmserver",
+    "image": "alexxx113/hassio-alarmserver",
     "startup": "before",
     "boot": "auto",
     "options": {},
